syntax = "proto3";

package api.grpc;

service Locking {
  rpc Create(LockRequest) returns (LockResponse);
  rpc Remove(LockRequest) returns (LockResponse);
  rpc List(Empty) returns (ListResponse);

  rpc Lock(LockRequest) returns (LockResponse);
  rpc Unlock(LockRequest) returns (LockResponse);

  rpc State(LockRequest) returns (LockResponse);
  rpc Watch(Empty) returns (stream LockEvent);

  rpc Peers(Empty) returns (PeersResponse);
}

message Empty {}

message LockRequest {
  string name = 1;
}

message LockResponse {
  oneof body {
    string error = 1;
    bool state = 2;
  }
}

message LockEvent {
  enum Status {
    Created = 0;
    Removed = 1;
    Unlocked = 2;
    Locked = 3;
  }
  string name = 1;
  Status status = 2;
}

message PeersResponse {
  message Peer {
    uint32 status = 1;
    string cluster_address = 2;
    string api_address = 3;
  }
  repeated Peer peers = 1;
}

message ListResponse {
  message Lock {
    string name = 1;
    bool state = 2;
  }
  repeated Lock locks = 1;
}
